added other pages

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<div class="brand">
 				<span>
 					<span class="brand-brackets">[</span>
-					<a class="brand-link" href="a.html">jovanovic</a>
+					<a class="brand-link" href="index.html">jovanovic</a>
 					<span class="brand-brackets">]</span>
 				</span>
 			</div>
@@ -29,15 +29,15 @@
 				</div>
 				<div class="nav-button"  onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
 					<p class="nav-number">02</p>
-					<a class="nav-link" href="#">// experience</a>
+					<a class="nav-link" href="experience.html">// experience</a>
 				</div>
 				<div class="nav-button"  onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
 					<p class="nav-number">03</p>
-					<a class="nav-link" href="#">// school</a>
+					<a class="nav-link" href="school.html">// school</a>
 				</div>
 				<div class="nav-button"  onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
 					<p class="nav-number">04</p>
-					<a class="nav-link" href="#">// contact</a>
+					<a class="nav-link" href="contact.html">// contact</a>
 				</div>
 			</div>
 		</div>
@@ -52,9 +52,8 @@
 				</div>
 			</div>
 			<div class="cta-support">FULL-STACK SOFTWARE DEVELOPER</div>
-			<!--
+			<div class="cta-support">Class info: V. Krasteva, ICS4U0</div>
 			<div class="cta-description">Hi! I'm Luka, a high school software developer with a wide skillset. Ranging from web-dev to python simulations, I have experience in every facet of programming.</div>
-		-->
 		</div>
 
 		<script src="scripts/background.js"></script>
