--- a/school.html
+++ b/school.html
@@ -4,9 +4,57 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Luka Jovanovic - School</title>
+
+		<link rel="stylesheet" href="./styles/navbar.css">
+	    <link rel="stylesheet" href="./styles/school.css">
 	</head>
 	<body>
-		<h1>School page</h1>
-		<p>This page feature all my notes for the AP ICS4U0 class</p>
+		<!-- NAVBAR -->
+		<div class="nav-container">
+			<div class="brand">
+				<span>
+					<span class="brand-brackets">[</span>
+					<a class="brand-link" href="index.html">jovanovic</a>
+					<span class="brand-brackets">]</span>
+				</span>
+			</div>
+			<div class="navbar">
+
+				<div class="nav-button" onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
+					<p class="nav-number">01</p>
+					<a class="nav-link" href="index.html">// home</a>
+				</div>
+				<div class="nav-button"  onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
+					<p class="nav-number">02</p>
+					<a class="nav-link" href="experience.html">// experience</a>
+				</div>
+				<div class="nav-button"  onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
+					<p class="nav-number">03</p>
+					<a class="nav-link" href="school.html">// school</a>
+				</div>
+				<div class="nav-button"  onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
+					<p class="nav-number">04</p>
+					<a class="nav-link" href="contact.html">// contact</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="intro">
+			<div>
+				Looking for something AP?
+			</div>
+
+			<div class="searchbar">
+				<input type="text">
+			</div>
+		</div>
+
+		<div class="notes">
+			<div class="note-container">
+
+			</div>
+		</div>
+
+		<script src="scripts/navbar.js"></script>
 	</body>
 </html>
