--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		
 	    <link rel="stylesheet" href="./styles/navbar.css">
 	    <link rel="stylesheet" href="./styles/style.css">
+
+	    <script src="https://cdn.babylonjs.com/ammo.js"></script>
+	    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.js"></script>
 	</head>
 
 	<body>
