added lighting to homepage

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	    <link rel="stylesheet" href="./styles/style.css">
 
 	    <script src="https://cdn.babylonjs.com/ammo.js"></script>
-	    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.js"></script>
+	    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.151.3/three.min.js"></script>
 	</head>
 
 	<body>
@@ -59,7 +59,7 @@
 			<div class="cta-description">Hi! I'm Luka, a high school software developer with a wide skillset. Ranging from web-dev to python simulations, I have experience in every facet of programming.</div>
 		</div>
 
-		<script src="scripts/background.js"></script>
+		<script src="scripts/physicsBackground.js"></script>
 		<script src="scripts/navbar.js"></script>
 	</body>
 </html>
