--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,55 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Luka Jovanovic - Contact</title>
+
+		<link rel="stylesheet" href="./styles/navbar.css">
+		<link rel="stylesheet" href="./styles/contact.css">
 	</head>
 	<body>
-		<h1>Contact page</h1>
-		<p>This page will allow someone to contact me, as well as a brief biography on myself</p>
+		<!-- NAVBAR -->
+		<div class="nav-container">
+			<div class="brand">
+				<span>
+					<span class="brand-brackets">[</span>
+					<a class="brand-link" href="index.html">jovanovic</a>
+					<span class="brand-brackets">]</span>
+				</span>
+			</div>
+			<div class="navbar">
+
+				<div class="nav-button" onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
+					<p class="nav-number">01</p>
+					<a class="nav-link" href="index.html">// home</a>
+				</div>
+				<div class="nav-button"  onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
+					<p class="nav-number">02</p>
+					<a class="nav-link" href="experience.html">// experience</a>
+				</div>
+				<div class="nav-button"  onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
+					<p class="nav-number">03</p>
+					<a class="nav-link" href="school.html">// school</a>
+				</div>
+				<div class="nav-button"  onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
+					<p class="nav-number">04</p>
+					<a class="nav-link" href="contact.html">// contact</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="main-container">
+			<div class="title">
+				Contact Me!
+			</div>
+
+			Your email:<br>
+			<input type="text" placeholder="john@example.com">
+
+			<br><br>Write me a message!<br>
+			<textarea></textarea>
+			<br><br>
+			<button class="send">Send</button>
+		</div>
+
+		<script src="scripts/navbar.js"></script>
 	</body>
 </html>
