--- a/experience.html
+++ b/experience.html
@@ -4,9 +4,79 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Luka Jovanovic - Experience</title>
+
+		<link rel="stylesheet" href="./styles/navbar.css">
+		<link rel="stylesheet" href="./styles/experience.css">
 	</head>
 	<body>
-		<h1>Experience page</h1>
-		<p>This page will feature all of my past programming experience, as well as demos and links</p>
+		<!-- NAVBAR -->
+		<div class="nav-container">
+			<div class="brand">
+				<span>
+					<span class="brand-brackets">[</span>
+					<a class="brand-link" href="index.html">jovanovic</a>
+					<span class="brand-brackets">]</span>
+				</span>
+			</div>
+			<div class="navbar">
+
+				<div class="nav-button" onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
+					<p class="nav-number">01</p>
+					<a class="nav-link" href="index.html">// home</a>
+				</div>
+				<div class="nav-button"  onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
+					<p class="nav-number">02</p>
+					<a class="nav-link" href="experience.html">// experience</a>
+				</div>
+				<div class="nav-button"  onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
+					<p class="nav-number">03</p>
+					<a class="nav-link" href="school.html">// school</a>
+				</div>
+				<div class="nav-button"  onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
+					<p class="nav-number">04</p>
+					<a class="nav-link" href="contact.html">// contact</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="main-container">
+			<div class="panel">
+				<div>
+					<div class="title">
+						MCPT Learning Branch
+					</div>
+					<div class="description">
+						I am currently a member of the Learning Branch in the programming club at Mackenzie. This club offers great opportunities for students to expand their knowledge in computer programming. As a Learning executive, I create and present workshops on specific topics like Web Dev, Game Dev, as well as more niche topics like collision. We also hosted two events this year, the Winter Game Jam, as well as LyonHacks III.
+					</div>
+				</div>
+				<div class="image-container">
+					<img src="./assets/images/mcpt-logo.svg">
+				</div>
+			</div>
+
+			<div class="panel">
+				<div>
+					<div class="title">
+						Individual Tutoring
+					</div>
+					<div class="description">
+						I have been tutoring people individually for around three years now. Having gone through around ten students, I have taken each from a premliminary understanding, or none at all, to near fluent level of programming efficiency.
+					</div>
+				</div>
+			</div>
+
+			<div class="panel">
+				<div>
+					<div class="title">
+						Beethoven Discord Bot
+					</div>
+					<div class="description">
+						The Beethoven discord bot was a bot built to play music on discord servers. As demand rose due to the most popular bots going out of service, I built my own bot to share with my friends. The bot quickly spread, and at peak times serviced around 20 people simultaneously.
+					</div>
+				</div>
+			</div>
+		</div>
+	
+		<script src="scripts/navbar.js"></script>		
 	</body>
 </html>
