--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 	    <script src="https://cdn.babylonjs.com/ammo.js"></script>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.151.3/three.min.js"></script>
+		<script src="scripts/libraries/THREEx.js"></script>
+
 	</head>
 
 	<body>
@@ -54,8 +56,10 @@
 					JOVANOVIC
 				</div>
 			</div>
+			<!--
 			<div class="cta-support">FULL-STACK SOFTWARE DEVELOPER</div>
 			<div class="cta-support">Class info: V. Krasteva, ICS4U0</div>
+		-->
 			<div class="cta-description">Hi! I'm Luka, a high school software developer with a wide skillset. Ranging from web-dev to python simulations, I have experience in every facet of programming.</div>
 		</div>
 
