--- a/school.html
+++ b/school.html
@@ -51,7 +51,10 @@
 
 		<div class="notes">
 			<div class="note-container">
+				<div class="note-textarea">
 
+				</div>
+				<div>
 			</div>
 		</div>
 
