created school buttons

--- a/school.html
+++ b/school.html
@@ -47,6 +47,51 @@
 					test
 				</div>
 			</div>
+			<div class="note-wrapper">
+				<div class="note">
+					test
+				</div>
+			</div>
+			<div class="note-wrapper">
+				<div class="note">
+					test
+				</div>
+			</div>
+			<div class="note-wrapper">
+				<div class="note">
+					test
+				</div>
+			</div>
+			<div class="note-wrapper">
+				<div class="note">
+					test
+				</div>
+			</div>
+			<div class="note-wrapper">
+				<div class="note">
+					test
+				</div>
+			</div>
+			<div class="note-wrapper">
+				<div class="note">
+					test
+				</div>
+			</div>
+			<div class="note-wrapper">
+				<div class="note">
+					test
+				</div>
+			</div>
+			<div class="note-wrapper">
+				<div class="note">
+					test
+				</div>
+			</div>
+			<div class="note-wrapper">
+				<div class="note">
+					test
+				</div>
+			</div>
 		</div>
 		<script src="scripts/navbar.js"></script>
 	</body>
