--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
 					JOVANOVIC
 				</div>
 			</div>
+			
+			<div class="cta-support">[ FULL-STACK SOFTWARE DEVELOPER ]</div>
 			<!--
-			<div class="cta-support">FULL-STACK SOFTWARE DEVELOPER</div>
-			<div class="cta-support">Class info: V. Krasteva, ICS4U0</div>
-		-->
 			<div class="cta-description">Hi! I'm Luka, a high school software developer with a wide skillset. Ranging from web-dev to python simulations, I have experience in every facet of programming.</div>
+		-->
 		</div>
 
-		<script src="scripts/physicsBackground.js"></script>
+		<script src="scripts/background.js"></script>
 		<script src="scripts/navbar.js"></script>
 	</body>
 </html>
