--- a/school.html
+++ b/school.html
@@ -136,6 +136,6 @@
 			</div>
 		</div>
 		<script src="scripts/navbar.js"></script>
-		<script src="scripts/school_old.js"></script>
+		<script src="scripts/school.js"></script>
 	</body>
 </html>
