--- a/contact.html
+++ b/contact.html
@@ -9,50 +9,55 @@
 		<link rel="stylesheet" href="./styles/contact.css">
 	</head>
 	<body>
-		<!-- NAVBAR -->
-		<div class="nav-container">
-			<div class="brand">
-				<span>
-					<span class="brand-brackets">[</span>
-					<a class="brand-link" href="index.html">jovanovic</a>
-					<span class="brand-brackets">]</span>
-				</span>
-			</div>
-			<div class="navbar">
+		<canvas id="background"></canvas>
 
-				<div class="nav-button" onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
-					<p class="nav-number">01</p>
-					<a class="nav-link" href="index.html">// home</a>
+		<div class="blur">
+			<!-- NAVBAR -->
+			<div class="nav-container">
+				<div class="brand">
+					<span>
+						<span class="brand-brackets">[</span>
+						<a class="brand-link" href="index.html">jovanovic</a>
+						<span class="brand-brackets">]</span>
+					</span>
 				</div>
-				<div class="nav-button"  onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
-					<p class="nav-number">02</p>
-					<a class="nav-link" href="experience.html">// experience</a>
+				<div class="navbar">
+
+					<div class="nav-button" onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
+						<p class="nav-number">01</p>
+						<a class="nav-link" href="index.html">// home</a>
+					</div>
+					<div class="nav-button"  onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
+						<p class="nav-number">02</p>
+						<a class="nav-link" href="experience.html">// experience</a>
+					</div>
+					<div class="nav-button"  onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
+						<p class="nav-number">03</p>
+						<a class="nav-link" href="school.html">// school</a>
+					</div>
+					<div class="nav-button"  onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
+						<p class="nav-number">04</p>
+						<a class="nav-link" href="contact.html">// contact</a>
+					</div>
 				</div>
-				<div class="nav-button"  onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
-					<p class="nav-number">03</p>
-					<a class="nav-link" href="school.html">// school</a>
+			</div>
+
+			<div id="main-container">
+				<div id="title">
+					Hi 👋 What's your name?
 				</div>
-				<div class="nav-button"  onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
-					<p class="nav-number">04</p>
-					<a class="nav-link" href="contact.html">// contact</a>
+
+				<div id="input-area">
+					<input type='text' class="input-text" id="input" autocomplete="off" placeholder="John Smith...">
+				</div>
+
+				<div id="next-container">
+					<button id="next"><div>➡</div></button>
 				</div>
 			</div>
 		</div>
 
-		<div class="main-container">
-			<div class="title">
-				Contact Me!
-			</div>
-
-			Your email:<br>
-			<input type="text" placeholder="john@example.com">
-
-			<br><br>Write me a message!<br>
-			<textarea></textarea>
-			<br><br>
-			<button class="send">Send</button>
-		</div>
-
+		<script src="scripts/contact.js"></script>
 		<script src="scripts/navbar.js"></script>
 	</body>
 </html>
