--- a/javadoc.html
+++ b/javadoc.html
@@ -163,5 +163,6 @@ public class Binturong {
 }</pre>
 -->
 		<script src="scripts/notes.js"></script>
+		<script src="scripts/navbar.js"></script>
 	</body>
 </html>
