started experiences page

--- a/experience.html
+++ b/experience.html
@@ -40,43 +40,48 @@
 		</div>
 
 		<div class="main-container">
-			<div class="panel">
-				<div>
-					<div class="title">
-						MCPT Learning Branch
-					</div>
-					<div class="description">
-						I am currently a member of the Learning Branch in the programming club at Mackenzie. This club offers great opportunities for students to expand their knowledge in computer programming. As a Learning executive, I create and present workshops on specific topics like Web Dev, Game Dev, as well as more niche topics like collision. We also hosted two events this year, the Winter Game Jam, as well as LyonHacks III.
-					</div>
-				</div>
-				<div class="image-container">
-					<img src="./assets/images/mcpt-logo.svg">
-				</div>
+			<div class="title">
+				{ <t id="title-text">about me</t> }
 			</div>
 
-			<div class="panel">
-				<div>
-					<div class="title">
-						Individual Tutoring
-					</div>
-					<div class="description">
-						I have been tutoring people individually for around three years now. Having gone through around ten students, I have taken each from a premliminary understanding, or none at all, to near fluent level of programming efficiency.
-					</div>
+			<div class="about-container">
+				<div class="about-section">
+<t class="red">public class</t> <t class="green">Summary</t> {<br>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;<t class="blue">String</t> name <t class="red">=</t> <t class="yellow">"Luka"</t>;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;<t class="blue">int</t> age <t class="red">=</t> <t class="purple">16</t>;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;<t class="blue">String</t> nationality <t class="red">=</t> <t class="yellow">"🇷🇸"</t>;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;<t class="blue">boolean</t> isSleeping <t class="red">=</t> <t class="purple">true</t>;<br>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;<t class="red">public void</t> <t class="green">getAffiliations</t>() {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;affiliations.<t class="blue">add</t>(<t class="yellow">"MCPT"</t>);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;affiliations.<t class="blue">add</t>(<t class="yellow">"Project Metropolis"</t>);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;affiliations.<t class="blue">add</t>(<t class="yellow">"Clean Air Alliance"</t>);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;affiliations.<t class="blue">add</t>(<t class="yellow">"Cybersecurity Club"</t>);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;}<br>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;<t class="red">public void</t> <t class="green">getSkills</t>() {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;skills.<t class="blue">add</t>(<t class="yellow">"Waterpolo"</t>);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;skills.<t class="blue">add</t>(<t class="yellow">"French Horn"</t>);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;skills.<t class="blue">add</t>(<t class="yellow">"Programming</t>");<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;skills.<t class="blue">add</t>(<t class="yellow">"Skilled trades"</t>);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;}<br>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;<t class="red">public void</t> <t class="green">getAwards</t>() {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;awards.<t class="blue">add</t>(<t class="yellow">"Graduating Math Award"</t>);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;awards.<t class="blue">add</t>(<t class="yellow">"Graduating Valedictorian"</t>);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;awards.<t class="blue">add</t>(<t class="yellow">"Academic Excellence Award"</t>);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;awards.<t class="blue">add</t>(<t class="yellow">"$1000 IMC Scholarship"</t>);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;}<br>
+}
 				</div>
-			</div>
+				<div class="image-section">
 
-			<div class="panel">
-				<div>
-					<div class="title">
-						Beethoven Discord Bot
-					</div>
-					<div class="description">
-						The Beethoven discord bot was a bot built to play music on discord servers. As demand rose due to the most popular bots going out of service, I built my own bot to share with my friends. The bot quickly spread, and at peak times serviced around 20 people simultaneously.
-					</div>
 				</div>
 			</div>
 		</div>
 	
-		<script src="scripts/navbar.js"></script>		
+		<script src="scripts/navbar.js"></script>
+		<script src="scripts/experience.js"></script>
 	</body>
 </html>
