added image to experience page

--- a/experience.html
+++ b/experience.html
@@ -45,12 +45,12 @@
 			</div>
 
 			<div class="about-container">
-				<div class="about-section">
+				<div class="summary-section">
 <t class="red">public class</t> <t class="green">Summary</t> {<br>
 <br>
 &nbsp;&nbsp;&nbsp;&nbsp;<t class="blue">String</t> name <t class="red">=</t> <t class="yellow">"Luka"</t>;<br>
 &nbsp;&nbsp;&nbsp;&nbsp;<t class="blue">int</t> age <t class="red">=</t> <t class="purple">16</t>;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;<t class="blue">String</t> nationality <t class="red">=</t> <t class="yellow">"🇷🇸"</t>;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;<t class="blue">String</t> nationality <t class="red">=</t> <t class="yellow arial">"🇷🇸"</t>;<br>
 &nbsp;&nbsp;&nbsp;&nbsp;<t class="blue">boolean</t> isSleeping <t class="red">=</t> <t class="purple">true</t>;<br>
 <br>
 &nbsp;&nbsp;&nbsp;&nbsp;<t class="red">public void</t> <t class="green">getAffiliations</t>() {<br>
@@ -75,8 +75,12 @@
 &nbsp;&nbsp;&nbsp;&nbsp;}<br>
 }
 				</div>
-				<div class="image-section">
-
+				<div class="about-section">
+					<div class="about-image-logo">
+						<span class="image-container">
+							<img src="./assets/images/image.jpg" id="photo">
+						</span>
+					</div>
 				</div>
 			</div>
 		</div>
