started about me section

--- a/experience.html
+++ b/experience.html
@@ -78,8 +78,18 @@
 				<div class="about-section">
 					<div class="about-image-logo">
 						<span class="image-container">
-							<img src="./assets/images/image.jpg" id="photo">
+							<div class="outline-container outline-1"></div>
+							<div class="outline-container outline-2"></div>
+							<img src="./assets/images/luka.jpg" id="photo">
 						</span>
+					</div>
+					<div class="description-section">
+						<div class="description-title">
+							Hi there!
+						</div>
+						<div class="description">
+
+						</div>
 					</div>
 				</div>
 			</div>
