finished experience page

--- a/experience.html
+++ b/experience.html
@@ -107,14 +107,112 @@
 					</div>
 				</div>
 			</div>
+		</div>
 
-			<div class="projects-container">
-				<div class="projects-title">
-					PROJECTS
+		<div class="projects-container">
+			<div class="projects-title">
+				// PROJECTS
+			</div>
+			<div class="projects-section">
+				<div class="project">
+					<img src="./assets/images/apothem.png" class="project-image">
+					<div class="project-info">
+						<div class="project-info-title">
+							&lt;<t class="blue">Apothem</t>/&gt;
+						</div>
+						<div class="project-link">
+							🔗 <a target="_blank" href="https://nelimalu.github.io/Apothem/">https://nelimalu.github.io/Apothem/</a>
+						</div>
+						<div class="project-tags">
+							<span class="tag">Nerdamer</span>
+							<span class="tag">API</span>
+							<span class="tag">Javascript</span>
+						</div>
+						<div class="project-description">
+							Apothem is a student-oriented math help website, featuring
+							a dynamic graphing calculator, a trigonometrical calculator,
+							a scientific calculator, as well as a place to upload photos
+							of your algebra homework and have it solved.
+						</div>
+					</div>
+				</div>
+				<div class="project">
+					<img src="./assets/images/codedepot.png" class="project-image">
+					<div class="project-info">
+						<div class="project-info-title">
+							&lt;<t class="blue">Code Depot</t>/&gt;
+						</div>
+						<div class="project-link">
+							🔗 <a target="_blank" href="https://github.com/nelimalu/CodeDepot">https://github.com/nelimalu/CodeDepot</a>
+						</div>
+						<div class="project-tags">
+							<span class="tag">Flask</span>
+							<span class="tag">SQL</span>
+							<span class="tag">Bootstrap</span>
+						</div>
+						<div class="project-description">
+							Code Depot is a silver-placing hackathon submission. It's designed to
+							act as a place to find free coding workshops for free. This meant a way to browse
+							free courses, with a upvote and downvote rating system, a favourites tab, accounts
+							and login capabilites, and a way to suggest new courses to be added to the site.
+						</div>
+					</div>
+				</div>
+				<div class="project">
+					<img src="./assets/images/nuncius.png" class="project-image">
+					<div class="project-info">
+						<div class="project-info-title">
+							&lt;<t class="blue">Nuncius</t>/&gt;
+						</div>
+						<div class="project-link">
+							🔗 <a target="_blank" href="https://github.com/nelimalu/Nuncius">https://github.com/nelimalu/Nuncius</a>
+						</div>
+						<div class="project-tags">
+							<span class="tag">Sockets</span>
+							<span class="tag">JSON</span>
+							<span class="tag">Encryption</span>
+						</div>
+						<div class="project-description">
+							Nuncius is a end-to-end encrypted online chatroom that runs
+							on the command terminal. It uses RSA encrpytion as well as a diffie-hellman
+							key exchange to secure information. Accounts have a username and password, with
+							all passwords saved in SHA-512 encrypted form. 
+						</div>
+					</div>
+				</div>
+			
+			</div>
+		</div>
+		
+		<div class="projects-container">
+			<div class="projects-title">
+				// BIBLIOGRAPHY
+			</div>
+			<div class="bibliography-container">
+				<div class="bibliography-title">Works Cited</div>
+				<div class="bibliography">
+					akzhy. “Documentation.” Vara, 2020, vara.akzhy.com/documentation/. Accessed 29 Apr. 2023.<br>
+					Cabello, Ricardo. “Three.js Docs.” Threejs.org, 2023, threejs.org/docs/. Accessed 28 Apr. 2023.<br>
+					Cyubahiro, Patrick . “Object-Oriented Programming in Java – a Beginner’s Guide.” FreeCodeCamp.org, 18 Apr. 2022, <br>www.freecodecamp.org/news/object-oriented-programming-concepts-java/.
+					Etienne, Jerome. “Jeromeetienne/Threex.” GitHub, 30 Mar. 2023, github.com/jeromeetienne/threex. Accessed 29 Apr. 2023.<br>
+					Geeksforgeeks. “ArrayList in Java.” GeeksforGeeks, 6 Oct. 2016, www.geeksforgeeks.org/arraylist-in-java/.<br>
+					---. “Arrays Class in Java.” GeeksforGeeks, 17 June 2016, www.geeksforgeeks.org/array-class-in-java/.<br>
+					---. “Binary Search - GeeksforGeeks.” GeeksforGeeks, Apr. 2019, www.geeksforgeeks.org/binary-search/.<br>
+					---. “Interfaces in Java - GeeksforGeeks.” GeeksforGeeks, 18 May 2016, www.geeksforgeeks.org/interfaces-in-java/.<br>
+					---. “Recursion in Java.” GeeksforGeeks, 23 Apr. 2019, www.geeksforgeeks.org/recursion-in-java/.<br>
+					---. “Searching Algorithms in Java.” GeeksforGeeks, 9 Aug. 2020, www.geeksforgeeks.org/searching-algorithms-in-java/.<br>
+					---. “Sorting Algorithms - GeeksforGeeks.” GeeksforGeeks, 2017, www.geeksforgeeks.org/sorting-algorithms/.<br>
+					Herbert, David. “CSS ::Before and ::After for Custom Animations and Transitions.” LogRocket Blog, 20 Nov. 2022, blog.logrocket.com/css-before-after-custom-animations-transitions/. Accessed 29 Apr. 2023.<br>
+					https://www.facebook.com/Stackify, and https://www.facebook.com/Stackify. “What Are OOP Concepts in Java? 4 Primary Concepts.” Stackify, 30 Apr. 2019, stackify.com/oops-concepts-in-java/.<br>
+					Mozilla. “Canvas API.” MDN Web Docs, 2 Dec. 2019, developer.mozilla.org/en-US/docs/Web/API/Canvas_API.<br>
+					---. “CSS: Cascading Style Sheets.” MDN Web Docs, 26 June 2019, developer.mozilla.org/en-US/docs/Web/CSS.<br>
+		Rapidtables. “Mailto | HTML Mailto Link.” Www.rapidtables.com, 2023, www.rapidtables.com/web/html/mailto.html.<br>
+		Simon. “Building a Simple 3D Scene with Physics in JavaScript & Three.js.” Www.youtube.com, 23 Feb. 2022, www.youtube.com/watch?v=puDiCbrjIzc&t=156s&ab_channel=SimonDev. Accessed 29 Apr. 2023.<br>
+		Zakai, Alon. “Ammo.js.” GitHub, 28 Apr. 2023, github.com/kripken/ammo.js/. Accessed 29 Apr. 2023.<br>
 				</div>
 			</div>
 		</div>
-	
+
 		<script src="scripts/navbar.js"></script>
 		<script src="scripts/experience.js"></script>
 	</body>
