changed luka.jpg to png

--- a/experience.html
+++ b/experience.html
@@ -81,7 +81,7 @@
 						<span class="image-container">
 							<div class="outline-container outline-1"></div>
 							<div class="outline-container outline-2"></div>
-							<img src="./assets/images/luka.jpg" id="photo">
+							<img src="./assets/images/luka.png" id="photo">
 						</span>
 					</div>
 					<div class="description-section">
