--- a/experience.html
+++ b/experience.html
@@ -169,7 +169,7 @@
 						</div>
 						<div class="project-tags">
 							<span class="tag">Sockets</span>
-							<span class="tag">JSON</span>
+							<span class="tag">Python</span>
 							<span class="tag">Encryption</span>
 						</div>
 						<div class="project-description">
