created files for each lesson

--- a/school.html
+++ b/school.html
@@ -55,7 +55,7 @@
 				</a>
 			</div>
 			<div class="note-wrapper">
-				<div class="note light-pink">
+				<a href="objectsclasses.html" class="note light-pink">
 					<div>
 						<span class="note-text">
 							Objects
@@ -65,10 +65,10 @@
 							Classes
 						</span>
 					</div>
-				</div>
+				</a>
 			</div>
 			<div class="note-wrapper">
-				<div class="note blue">
+				<a href="UMLAccessModifiers.html" class="note blue">
 					<div>
 						<span class="note-text">
 							UML
@@ -78,17 +78,17 @@
 							Access Modifiers
 						</span>
 					</div>
-				</div>
+				</a>
 			</div>
 			<div class="note-wrapper">
-				<div class="note cyan">
+				<a href="inheritance.html" class="note cyan">
 					<div class="note-text">
 						Inheritance
 					</div>
-				</div>
+				</a>
 			</div>
 			<div class="note-wrapper">
-				<div class="note light-blue">
+				<a href="overloadingoverriding.html" class="note light-blue">
 					<div>
 						<span class="note-text">
 							Overloading
@@ -98,42 +98,42 @@
 							Overriding
 						</span>
 					</div>
-				</div>
+				</a>
 			</div>
 			<div class="note-wrapper">
-				<div class="note banana">
+				<a href="arrays.html" class="note banana">
 					<div class="note-text">
 						Arrays
 					</div>
-				</div>
+				</a>
 			</div>
 			<div class="note-wrapper">
-				<div class="note yellow">
+				<a href="arraylists.html" class="note yellow">
 					<div class="note-text">
 						Arraylists
 					</div>
-				</div>
+				</a>
 			</div>
 			<div class="note-wrapper">
-				<div class="note purple">
+				<a href="2Darrays.html" class="note purple">
 					<div class="note-text">
 						2D Arrays
 					</div>
-				</div>
+				</a>
 			</div>
 			<div class="note-wrapper">
-				<div class="note navy">
+				<a href="searchandsort.html" class="note navy">
 					<div class="note-text">
 						Search & Sort
 					</div>
-				</div>
+				</a>
 			</div>
 			<div class="note-wrapper">
-				<div class="note green">
+				<a href="recursion.html" class="note green">
 					<div class="note-text">
 						Recursion
 					</div>
-				</div>
+				</a>
 			</div>
 		</div>
 		<script src="scripts/navbar.js"></script>
